// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FormContainer Stories Default 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<div
  class="dimmable emotion-0"
>
  Some Content
  <div
    class="ui inverted dimmer"
  >
    <div
      class="content"
    >
      <div
        class="ui text loader"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: FormContainer Stories Loading 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<div
  class="dimmed dimmable emotion-0"
>
  My content is dimmed
  <div
    class="ui active transition visible inverted dimmer"
    style="display: flex;"
  >
    <div
      class="content"
    >
      <div
        class="ui text loader"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: FormContainer Stories Loading Message 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<div
  class="dimmed dimmable emotion-0"
>
  My content is dimmed
  <div
    class="ui active transition visible inverted dimmer"
    style="display: flex;"
  >
    <div
      class="content"
    >
      <div
        class="ui text loader"
      >
        Custom Loading Message
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: FormContainer Stories Passes Extra Props 1`] = `
.emotion-0 {
  box-shadow: 0 0 15px 2px rgba(0,0,0,0.1);
  border-radius: 5px;
  border: solid 1px rgba(0,0,0,0.1);
  padding: 20px;
  background: #fff;
  margin-bottom: 10px;
}

<form
  class="ui form dimmable emotion-0"
>
  Some Content
  <div
    class="ui inverted dimmer"
  >
    <div
      class="content"
    >
      <div
        class="ui text loader"
      >
        Loading...
      </div>
    </div>
  </div>
</form>
`;
